# heisig_optimiser

./: .blockdiagrc  .gitignore  README.md  build.sh  draw.sh  format.sh  out.md  pyproject.toml  run.sh  test.sh  write.sh
d3/: app.js  index.jinja  style.css  template.jinja
d3test/: app.js  app_old.js  template.jinja  test.html  test_old.html
data/: populate.sh  update.sh
data/heisig/: patch_rsh.py  rsh_modified.xml
data/hsk/: LICENSE.md
diagrams/: 1000_know.diag  1001_wisdom.diag  1002_spear.diag  1003_gentle.diag  1004_knead.diag  1005_bestow.diag  1006_preface.diag  1007_beforehand.diag  1008_wild.diag  1009_class.diag  100_chaos.diag  1010_be about to.diag  1010_be_about_to.diag  1011_firm.diag  1012_worthy.diag  1013_bow.diag  1014_draw.diag  1015_fill.diag  1016_strong.diag  1017_weak.diag  1018_list.diag  1019_bullet.diag  101_-ed.diag  1020_expense.diag  1021_Buddha.diag  1022_younger brother.diag  1022_younger_brother.diag  1023_No..diag  1024_adroit.diag  1025_appellation.diag  1026_somebody.diag  1027_shoot.diag  1028_thank.diag  1029_old man.diag  1029_old_man.diag  102_woman.diag  1030_take an exam.diag  1030_take_an_exam.diag  1031_roast.diag  1032_offer.diag  (+3937 more)
fonts/: NotoSans_LICENSE.md  convert.sh
heisig_optimiser/: __main__.py  build_html.py  diagrams.py  draw_diagrams.py  generate_hierarchical_json.py  generate_hierarchies.py  json_to_diag.py  json_to_html.py  output_spreadsheet.py
heisig_optimiser/blockdiag/: draw_diagrams.py
template/: index.jinja  script.js  style.css  template.jinja
test/: baseline.csv
