[tool.poetry]
name = "heisig-optimiser"
version = "0.1.0"
description = ""
authors = ["will8211 <wmannard@gmail.com>"]
readme = "README.md"
packages = [{include = "heisig_optim`iser"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
isort = "^5.13.2"
tabulate = { version = "*", extras = ["widechars"] }

[tool.poetry.group.dev.dependencies]
black = {version = "^24.4.2", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
