[tool.poetry]
name = "heisig-optimiser"
version = "0.1.0"
description = ""
authors = ["will8211 <wmannard@gmail.com>"]
readme = "README.md"
packages = [{ include = "heisig_optimiser" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
blockdiag = "^3.0.0"
pillow = ">9,<10"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
