[tool.poetry]
name = "heisig-optimiser"
version = "0.1.0"
description = ""
authors = ["will8211 <wmannard@gmail.com>"]
readme = "README.md"
packages = [{ include = "heisig_optimiser" }]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
pillow = ">9,<10"
jinja2 = "^3.1.4"
jsmin = "^3.0.1"
lxml = "^5.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
djlint = "^1.34.1"
isort = "^5.13.2"
prettier = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
extension = "jinja"
profile = "jinja"
indent = 2
ignore = "J018"
